# bet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  railway.json
docs/: implementation-plan.md  system-spec.md
docs/implementation-steps/: 01-ledger-mvp.md  02-matcher-mvp.md  03-sharding-and-risk.md  04-kafka-and-websockets.md  05-admin-resolution-settlement.md
docs/runbooks/: railway-deploy.md  step-1-ledger-mvp.md  step-2-matcher-mvp.md  step-4-kafka-websockets.md
ledger-service/: Cargo.toml  Dockerfile  build.rs
ledger-service/migrations/: 0001_init.sql  0002_triggers.sql  0003_step5_settlement.sql
ledger-service/src/: lib.rs  logic.rs  main.rs  service.rs
ledger-service/tests/: ledger_integration.rs
matcher-data/admin/: markets.json
matcher-data/shard-0/market-demo__yes/: snapshot.pb
matcher-service/: Cargo.toml  build.rs
matcher-service/src/: admin.rs  book.rs  http.rs  kafka.rs  ledger.rs  lib.rs  main.rs  order_index.rs  persistence.rs  quality.rs  risk.rs  service.rs  sharding.rs  streaming.rs  types.rs
matcher-service/static/: dashboard.html
matcher-service/tests/: matcher_determinism.rs  sharding_and_risk.rs  step4_kafka_contract.rs  step4_streaming.rs  step5_admin_resolution_settlement.rs
proto/: ledger.proto  streaming.proto
scripts/: fake_traffic.sh
